# Adaptive-SomeIP-comms-framework-vSomeIP-

./: CMakeLists.txt  README.md  docker-compose.yml
config/: client.json  service.json
docker/: Dockerfile
src/: client.cpp  service.cpp
